objects/Project_Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Summary__c</fullName>
        <label>Completion Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Ready For Review</fullName>
                </value>
                <value>
                    <fullName>Re-Opened</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>Actual_Hours__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ZAAS_PRs</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Hours__c</columns>
        <columns>Completion_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>zaas</value>
        </filters>
        <label>ZAAS PRs</label>
    </listViews>
    <nameField>
        <label>Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Completion_and_hours_both_filled_1</fullName>
        <active>true</active>
        <errorConditionFormula>if ( (isPickVal(Status__c,  &apos;Ready For Review&apos;)),  OR (isBlank(Completion_Summary__c), isNull ( Actual_Hours__c )), false)</errorConditionFormula>
        <errorMessage>When the PR is ready for review you must fill in the actual hours and the completion summary</errorMessage>
    </validationRules>
</CustomObject>